fix: mobile styling by wrapping flex-box

--- a/app/styles/components/draft-progress-tracker.scss
+++ b/app/styles/components/draft-progress-tracker.scss
@@ -7,3 +7,7 @@
 .next-arrow {
   padding-top: 10px;
 }
+
+.promotion-draft-nav {
+  flex-wrap: wrap;
+}
